# barger

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  WORKSPACE
.github/: dependabot.yml
.github/workflows/: main.yml
client/: Cargo.toml
client/cargo/: BUILD.bazel
client/src/: config.rs  main.rs  request.rs
data/auth/: admin.json  headers.json
migrations/2021-01-01-000000_updated_at_trigger/: down.sql  up.sql
migrations/2021-01-02-000000_create_users/: down.sql  up.sql
migrations/2021-01-03-000000_create_group/: down.sql
migrations/2021-01-03-000000_create_groups/: up.sql
migrations/2021-01-04-000000_create_permissions/: up.sql
migrations/2021-01-05-000000_create_change_set/: down.sql
migrations/2021-01-05-000000_create_tokens/: down.sql  up.sql
migrations/2021-01-06-000000_create_resource/: down.sql  up.sql
migrations/2021-01-09-000000_create_secret/: up.sql
migrations/2021-01-31-005426_create_cluster/: up.sql
migrations/2021-02-07-002006_create_users/: up.sql
migrations/2021-02-13-175444_create_groups/: down.sql
proto/: barger.proto
server/: BUILD.bazel  Cargo.toml
server/cargo/: BUILD.bazel
server/migrations/2021-01-03-000000_create_group/: up.sql
server/migrations/2021-01-04-000000_create_service/: down.sql  up.sql
server/migrations/2021-01-05-000000_create_change_set/: up.sql
server/migrations/2021-01-07-000000_create_configuration/: down.sql  up.sql
server/migrations/2021-01-09-000000_create_secret/: down.sql
server/src/: config.rs  main.rs
server/src/authorization/: mod.rs
server/src/database/: clusters.rs  mod.rs
server/src/handlers/: clusters.rs  mod.rs
server/src/models/: common.rs  responses.rs
src/: config.rs  main.rs  schema.rs
src/authorization/: claims.rs  (+1 more)
(+272 files in other folders)
