[package]
name = "barger"
version = "0.1.0"
authors = ["Hrafn Orri Hrafnkelsson <HrafnOrri@BitCrow.net>"]
edition = "2018"

[dependencies]
actix-web = "3.3.2"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres"] }
dotenv = "0.15.0"
serde = "1.0.123"
