[package]
name = "barger"
version = "0.1.0"
authors = ["Hrafn Orri Hrafnkelsson <HrafnOrri@BitCrow.net>"]
edition = "2018"

[dependencies]
actix-cors = "0.5.4"
actix-web = "3.3.2"
actix-web-httpauth = "0.5.0"
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.5", features = ["chrono", "postgres"] }
dotenv = "0.15.0"
serde = "1.0.123"
