[package]
name = "client"
version = "0.1.0"
authors = ["Hrafn Orri Hrafnkelsson <HrafnOrri@BitCrow.net>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
jsonwebtoken = "7.2.0"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.124"
serde_derive = "1.0.124"
tokio = { version = "1", features = ["full"] }
toml = "0.5.8"
