load("@rules_rust//rust:rust.bzl", "rust_binary")

rust_binary(
    name = "server",
    srcs = glob(
        include = [
            "src/**/*.rs",
        ],
    ),
    edition = "2018",
    visibility = ["//visibility:public"],
    deps = [
        "//server/cargo:actix_cors",
        "//server/cargo:actix_rt",
        "//server/cargo:actix_web",
        "//server/cargo:actix_web_httpauth",
        "//server/cargo:chrono",
        "//server/cargo:diesel",
        "//server/cargo:dotenv",
        "//server/cargo:jsonwebtoken",
        "//server/cargo:serde",
    ],
)
